天池贷款违约数据集EDA

--- a/DataVisualization/Python-Seaborn.ipynb
+++ b/DataVisualization/Python-Seaborn.ipynb
@@ -552,13 +552,13 @@
    "source": [
     "## Figure-level和Axes-level绘图函数\n",
     "\n",
-    "seaborn 的绘图函数分为两个层次，**figure-level** 和 **axes-level**：\n",
-    "+ figure-level的函数有`relplot`,`catplot`等，它们返回的是`FacetGrid`对象——它是对matplotlib里`Figure`的封装。  \n",
+    "seaborn 的绘图函数分为两个层次，**Figure-level** 和 **Axes-level**：\n",
+    "+ Figure-level的函数有`relplot`,`catplot`等，它们返回的是`FacetGrid`对象——它是对matplotlib里`Figure`的封装。  \n",
     "这类函数都有一个`kind`参数，用来和 axes-level 的绘图函数进行绑定；\n",
-    "+ axes-level，这些函数返回的是matplotlib的 `Axes` 对象。\n",
+    "+ Axes-level，这些函数返回的是matplotlib的 `Axes` 对象。\n",
     "\n",
     "常用的figure-level和axes-level绘图函数如下.  \n",
-    "注意，这是 0.11.0(2020 September) 版的，主要的变化是：\n",
+    "注意，**这是 0.11.0(2020 September) 版的**，主要的变化是：\n",
     "1. 原来可视化分布的 `distplot`函数 --> `displot`（少了t）\n",
     "2. 新增了`histplot`,`ecdfplot`\n",
     "\n",
@@ -575,17 +575,18 @@
     "而Figure-level的绘图函数返回的是一个 [**`seabornFaceGrid`**](https://seaborn.pydata.org/generated/seaborn.FacetGrid.html#seaborn.FacetGrid) 对象，熟练的使用seaborn需要对这个对象做一些说明。\n",
     "\n",
     "\n",
-    "`class seaborn.FacetGrid(data, *, row=None, col=None, hue=None, col_wrap=None, sharex=True, sharey=True, height=3, aspect=1, palette=None, row_order=None, col_order=None, hue_order=None, hue_kws=None, dropna=False, legend_out=True, despine=True, margin_titles=False, xlim=None, ylim=None, subplot_kws=None, gridspec_kws=None, size=None)`.  \n",
-    "`FaceGrid`类工作原理如下：\n",
+    "`class seaborn.FacetGrid(data, *, row=None, col=None, hue=None, col_wrap=None, sharex=True, sharey=True, height=3, aspect=1, palette=None, row_order=None, col_order=None, hue_order=None, hue_kws=None, dropna=False, legend_out=True, despine=True, margin_titles=False, xlim=None, ylim=None, subplot_kws=None, gridspec_kws=None, size=None)` . \n",
+    "\n",
+    "`FacetGrid`类工作原理如下：\n",
     "1. 首先使用数据集dataset（long-format）和要使用的变量来初始化一个对象。  \n",
     "传入的变量被赋值给`row`, `col`, `hue` 这三个参数。  \n",
     "`row`和`col`的取值会决定绘图的Figure的子图布局，比如row的取值为2，col取值为3，那就会绘制一个$2\\times3$的布局子图。而`hue`会在每个子图里对数据进行分组。  \n",
     "如果没有传入这些变量，默认不分割子图——这就是\"FaceGrid\"代表的意思。\n",
-    "2. 每个子图对应于数据的子集，在这些子集上，调用`FaceGrid.map()`或者`FaceGrid.map_dataframe()`方法，用同样的绘图函数进行绘图.\n",
+    "2. **每个子图对应于数据的子集**，在这些子集上，调用`FaceGrid.map()`或者`FaceGrid.map_dataframe()`方法，用同样的绘图函数进行绘图.\n",
     "3. 对图形进行细微调整.\n",
     "\n",
     "\n",
-    "`FaceGrid`类的一些方法和属性如下所示，它们对微调图形很有帮助\n",
+    "`FacetGrid`类的一些方法和属性如下所示，它们对微调图形很有帮助\n",
     "+ `add_legend()`\n",
     "+ `set_titles()`，给所有的子图设置title\n",
     "+ `set_axis_labels()`\n",
@@ -2330,7 +2331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true,
   "toc-showmarkdowntxt": false
