--- a/Practice/00-Feature-engeneering.ipynb
+++ b/Practice/00-Feature-engeneering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,12 +162,323 @@
    "source": [
     "## 缺失值处理\n",
     "\n",
-    "`sklearn.impute`中提供了进行缺失值填充的类，主要有：\n",
-    "1. `SimpleImputer()`\n",
-    "2. `KNNImputer()`\n",
+    "有两个处理框架：\n",
     "\n",
-    "不过一般来说，直接使用pandas提供的`.fillna()`方法更为方便\n",
-    "\n"
+    "+ `sklearn.impute`中提供了进行缺失值填充的类，主要有：\n",
+    "  1. `SimpleImputer()`，提供了如下填充策略 (`strategy=`)：  \n",
+    "    + `mean`，均值填充，仅适用于数值型\n",
+    "    + `median`，中位数填充，仅适用于数值型\n",
+    "    + `most_frequent`，众数填充，对数值型和**字符型**特征都可用\n",
+    "    + `constant`，常数填充，配合`fill_value`参数使用，对数值型和**字符型**特征都可用\n",
+    "  2. `KNNImputer()`\n",
+    "\n",
+    "\n",
+    "+ pandas提供的`DataFrame.fillna()` ：    \n",
+    "提供了向前填充，向后填充，常数填充这几种填充策略。\n",
+    "\n",
+    "一般来说，使用pandas进行填充比较方便，不过如果要使用均值等统计量来填充，使用sklearn更为方便。  \n",
+    "特别要注意的是，**sklearn中的策略是对所有特征一起使用的，如果传入的数据里字符型和数值型特征混用，会报错**。\n",
+    "\n",
+    "所以，**推荐使用pandas进行缺失值处理**。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df1 中含有非数值的列\n",
+    "df1 = pd.DataFrame({'a':[1,2,2,np.nan], 'b':['A','A',None, 'B']})\n",
+    "\n",
+    "# df2中全是数值\n",
+    "df2 = pd.DataFrame({'a':[1,2,2,np.nan], 'b':[10,None,15,20]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 可以看出，pandas中的`fillna()`可以处理**非数值列**，而sklearn不行"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     a  b\n",
+       "0  1.0  A\n",
+       "1  2.0  A\n",
+       "2  2.0  0\n",
+       "3  0.0  B"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     a  b\n",
+       "0  1.0  A\n",
+       "1  2.0  A\n",
+       "2  2.0  A\n",
+       "3  2.0  B"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.fillna(method='ffill')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     a  b\n",
+       "0  1.0  A\n",
+       "1  2.0  A\n",
+       "2  2.0  B\n",
+       "3  NaN  B"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.fillna(method='backfill')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SimpleImputer(add_indicator=False, copy=True, fill_value='FILL',\n",
+       "              missing_values=nan, strategy='constant', verbose=0)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# imp = SimpleImputer(strategy='mean')\n",
+    "# imp = SimpleImputer(strategy='most_frequent')\n",
+    "imp = SimpleImputer(strategy='constant', fill_value='FILL')\n",
+    "imp.fit(df1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.0, 'A'],\n",
+       "       [2.0, 'A'],\n",
+       "       [2.0, None],\n",
+       "       ['FILL', 'B']], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp.transform(df1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 统计各列缺失值信息的函数"
    ]
   },
   {
@@ -184,8 +495,8 @@
     "    # 只展示有缺失值的特征\n",
     "    miss_num = miss_num[miss_num > 0]\n",
     "    total = df.shape[0]\n",
-    "    miss_persent = miss_num/total*100\n",
-    "    miss_info = pd.concat([miss_num, miss_persent, df.dtypes], axis = 1, keys=['miss_num', 'miss_percent','dtype'])\n",
+    "    miss_percent = miss_num/total*100\n",
+    "    miss_info = pd.concat([miss_num, miss_percent, df.dtypes], axis = 1, keys=['miss_num', 'miss_percent','dtype'])\n",
     "    miss_info['total'] = total\n",
     "    miss_info = miss_info[['miss_num','total','miss_percent','dtype']]\n",
     "    miss_info.dropna(inplace=True)\n",
@@ -193,8 +504,10 @@
     "    miss_info = miss_info.sort_values(by=['miss_num'],ascending=False).round(decimals=3)\n",
     "#     打印\n",
     "#     from IPython.display import display\n",
-    "#     display(miss_info[miss_info['miss_num'] > 0])  # 或者 print df.to_html()\n",
-    "#     print(miss_info[miss_info['miss_num'] > 0])\n",
+    "    print(\"miss_stat.shape: \", miss_info.shape)\n",
+    "    print(\"miss_stat:\")\n",
+    "    display(miss_info) \n",
+    "#     print(miss_info)\n",
     "    return miss_info"
    ]
   },
