天池贷款违约预测基准值

--- a/Practice/00-Feature-engeneering.ipynb
+++ b/Practice/00-Feature-engeneering.ipynb
@@ -515,6 +515,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "+ 对缺失值进行填充的函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 缺失值填充函数\n",
+    "def Fill_na(df, numerical_cols=None, discrete_cols=None):\n",
+    "    \"\"\"\n",
+    "    对数值特征使用均值填充，对离散特征使用众数填充\n",
+    "    \"\"\"\n",
+    "    df = df.copy()\n",
+    "    if numerical_cols is not None:\n",
+    "        # df.mean()返回的是一个series，可以直接用.to_dict()\n",
+    "        num_mean_dict = df[numerical_cols].mean(axis=0).to_dict()\n",
+    "        # 不知道为什么，下面这一句，是对 copy 进行的操作，而不是对 view 进行的操作\n",
+    "        # df[numerical_cols].fillna(value=num_mean_dict, inplace=True)\n",
+    "        df[numerical_cols] = df[numerical_cols].fillna(value=num_mean_dict)\n",
+    "    \n",
+    "    if discrete_cols is not None:\n",
+    "        # df.mode() 返回的是一个DataFrame，调用to_dict()后还需要进一步处理\n",
+    "        mode_dict = df[discrete_cols].mode(axis=0).to_dict()\n",
+    "        discrete_mode_dict = {}\n",
+    "        for key in mode_dict.keys():\n",
+    "            discrete_mode_dict[key] = mode_dict[key][0]\n",
+    "        # df[discrete_cols].fillna(value=discrete_mode_dict, inplace=True)\n",
+    "        df[discrete_cols] = df[discrete_cols].fillna(value=discrete_mode_dict)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 类别型特征的编码\n",
     "\n",
     "+ 目标变量是类别型，需要进行编码  \n",
@@ -4397,6 +4434,98 @@
    ],
    "source": [
     "df.diff()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 下面的例子中， `df[ ['col1','col2']  ]` 得到的是 view，但是紧随其后使用`.fillna()`时，却是在 copy 上执行的，不知道为什么"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(np.arange(6).reshape(2,3), columns=['a','b','c'])\n",
+    "df.iloc[0,:] = np.nan\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     a    b    c\n",
+       "0  NaN  NaN  NaN\n",
+       "1  3.0  4.0  5.0"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df[['a','b']] = 10\n",
+    "# df[['a','b']].fillna(0, inplace=True)\n",
+    "# df.loc[:,['a','b']] = 10\n",
+    "df.loc[:,['a','b']].fillna(0, inplace=True)\n",
+    "df"
    ]
   }
  ],
