--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -35,15 +35,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## matplotlib的一些有用资源\n",
-    "+ [matplotlib->tutorials->usage guide](https://matplotlib.org/tutorials/introductory/usage.html)  \n",
+    "## Matplotlib的一些有用资源\n",
+    "+ [Matplotlib->Tutorials->Usage guide](https://matplotlib.org/tutorials/introductory/usage.html)  \n",
     "  这个是matplotlib官方的文档，这一部分介绍了matplotlib中的一些基本框架和概念，包括：\n",
     "  Figure,Axes,Axis,backends,interactive modesl等等。\n",
     "\n",
     "+ [Anatomy of MatplotlibAnatomy of Matplotlib->Overview of Matplotlib](https://github.com/matplotlib/AnatomyOfMatplotlib)  \n",
     "  这是github上的一个教程文档，以jupyter格式提供，这个对于绘图方式解释的也很清楚。\n",
     "\n",
-    "+ [Matplotlib tutorial](https://www.labri.fr/perso/nrougier/teaching/matplotlib/#figures-subplots-axes-and-ticks)  \n",
+    "+ [Matplotlib Tutorial](https://www.labri.fr/perso/nrougier/teaching/matplotlib/#figures-subplots-axes-and-ticks)  \n",
     "  这个对于基本概念也有解释，还不错。\n",
     "\n",
     "+ [PythonDataScienceHandlebook->Chapter 4.8](https://github.com/jakevdp/PythonDataScienceHandbook/tree/master/notebooks)  \n",
@@ -455,7 +455,7 @@
     "ax.plot(x, y)\n",
     "\n",
     "#第 3 种 —— 绘制多子图时推荐使用\n",
-    "fig, axes = plt.subplots(111)  # 同时返回了Figure对象和Axes对象组成的矩阵\n",
+    "fig, axes = plt.subplots(nrows=1, rcols=1)  # 同时返回了Figure对象和Axes对象组成的矩阵\n",
     "axes[0].plot(x,y)\n",
     "\n",
     "#第 4 种 ——— 推荐使用\n",
@@ -467,7 +467,6 @@
     "fig2=plt.figure()\n",
     "new_axes=fig2.add_axes([0,0,1,1])\n",
     "new_axes.plot(x,y)\n",
-    "\n",
     "\n",
     "#各个对象的类型\n",
     "In [15]: type(ax)\n",
