--- a/ML-Action/04-tensorflow-tutorial.ipynb
+++ b/ML-Action/04-tensorflow-tutorial.ipynb
@@ -1063,7 +1063,7 @@
     "有三个步骤：  \n",
     "1. 定义神经网络的结构和前向传播的输出结果。\n",
     "2. 定义损失函数以及选择反向传播优化的算法 。\n",
-    "3. 生成会话（ tf.Session ）并且在训练、数据上反复运行反向传播优化算法\n",
+    "3. 生成会话（ tf.Session ）并且在训练数据上反复运行反向传播优化算法\n",
     "\n",
     "作为示例的神经网络如下图所示：  \n",
     "**它只有一个隐藏层，并且隐藏层没有使用激活函数。**\n",
