--- a/ML-Action/04-tensorflow-tutorial.ipynb
+++ b/ML-Action/04-tensorflow-tutorial.ipynb
@@ -2,27 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow version:  1.15.0\n",
-      "numpy version:  1.19.2\n",
-      "pandas version:  1.0.1\n"
+      "package版本信息：\n",
+      "numpy:       1.19.2\n",
+      "pandas:      1.0.1\n",
+      "matplotlib:  3.3.1\n",
+      "sklearn:     0.23.2\n",
+      "seaborn:     0.11.1\n",
+      "plotly:      4.14.1\n",
+      "TensorFlow version:  1.15.0\n"
      ]
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import plotly.express as px\n",
+    "from plotly import graph_objects as go\n",
+    "\n",
+    "import matplotlib\n",
+    "import plotly\n",
+    "import sklearn\n",
+    "import tensorflow as tf\n",
+    "\n",
     "from IPython.display import display\n",
-    "print(\"TensorFlow version: \",tf.__version__)\n",
-    "print(\"numpy version: \", np.__version__)\n",
-    "print(\"pandas version: \", pd.__version__)"
+    "plt.style.use(\"ggplot\")\n",
+    "\n",
+    "print(\"package版本信息：\")\n",
+    "print(\"numpy:      \", np.__version__)\n",
+    "print(\"pandas:     \", pd.__version__)\n",
+    "print(\"matplotlib: \", matplotlib.__version__)\n",
+    "print(\"sklearn:    \", sklearn.__version__)\n",
+    "print(\"seaborn:    \", sns.__version__)\n",
+    "print(\"plotly:     \", plotly.__version__)\n",
+    "\n",
+    "print(\"TensorFlow version: \",tf.__version__)"
    ]
   },
   {
