--- a/ML-Action/06-pytorch-tutorial.ipynb
+++ b/ML-Action/06-pytorch-tutorial.ipynb
@@ -581,6 +581,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "----\n",
+    "\n",
     "## 多元函数的反向求导\n",
     "\n",
     "多元函数是 $R^n \\Rightarrow R$ 的一个映射：自变量 $x \\in R^n$，因变量 $y=f(x) \\in R$. 这种情况下，偏导数 $\\frac{\\partial f}{\\partial x} \\in R^n$ 也是一个 $n$ 维向量.  \n",
@@ -904,7 +906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 自定义函数的反向求导"
+    "## 自定义函数的反向求导-TODO"
    ]
   },
   {
@@ -932,15 +934,416 @@
     "\n",
     "构建一个神经网络，有如下几步：\n",
     "1. 继承 `nn.Module` 抽象基类，\n",
-    "2. 在初始化方法`__init__()`中，存放网络中可学习的参数\n",
+    "2. 在初始化方法`__init__()`中，存放网络中可学习的参数，并使用`nn.Parameters()`封装\n",
     "3. 实现`nn.Module`抽象类中的前向传播方法`forward()`，梯度的反向传播方法不需要自己写，PyTorch会自动生成\n",
-    "4. 网络的可学习参数可以通过网络实例对象的`.parameters()` 或者 `.named_parameters()` 返回"
+    "4. 调用时可以是 `net.forward(X)`，也可以直接使用 `net(X)`\n",
+    "5. 网络的可学习参数可以通过网络实例对象的`.parameters()` 或者 `.named_parameters()` 返回\n",
+    "\n",
+    "下面的例子是**构建一个线性（没有激活函数）的全连接层，也就是 $y=Wx+b$**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 构建一个线性的网络\n",
+    "from torch import nn\n",
+    "\n",
+    "class LinearNN(nn.Module):\n",
+    "    # 构造函数\n",
+    "    def __init__(self, dim_input, dim_output):\n",
+    "        # 调用父类的构造函数\n",
+    "        super().__init__()\n",
+    "        # 再初始化自己的参数\n",
+    "        # 随机初始化参数矩阵W\n",
+    "        self.w = nn.Parameter(torch.randn(dim_input, dim_output))\n",
+    "        # 随机初始化偏置项\n",
+    "        self.b = nn.Parameter(torch.randn(dim_output))\n",
+    "        \n",
+    "    # 实现抽象类 nn.Module 的 forward 方法\n",
+    "    def forward(self, X):\n",
+    "        \"\"\"\n",
+    "        前向传播过程\n",
+    "        \"\"\"\n",
+    "        y = X.mm(self.w) + self.b\n",
+    "        return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w\n",
+      "Parameter containing:\n",
+      "tensor([[ 0.6475, -0.4241],\n",
+      "        [-0.1332, -1.3617],\n",
+      "        [ 0.3725,  1.7960]], requires_grad=True)\n",
+      "b\n",
+      "Parameter containing:\n",
+      "tensor([0.4546, 2.4694], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "linear = LinearNN(dim_input=3, dim_output=2)\n",
+    "\n",
+    "for param, value in linear.named_parameters():\n",
+    "    print(param)\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1510,  0.3097, -1.4704],\n",
+       "        [-0.1441,  0.3727,  0.6084],\n",
+       "        [-1.0195, -1.2713,  0.2241],\n",
+       "        [ 2.6327,  0.1713,  1.1290]])"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = torch.randn(4,3)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.2322, -0.5291],\n",
+       "        [ 0.5383,  3.1157],\n",
+       "        [ 0.0472,  5.0352],\n",
+       "        [ 2.5571,  3.1473]], grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 显式调用 forward 方法\n",
+    "# y_out = linear.forward(X)\n",
+    "\n",
+    "# 也可以直接调用\n",
+    "y_out = linear(X)\n",
+    "\n",
+    "y_out"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "-----------\n",
+    "\n",
+    "## 常用的神经网络模块-KEY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 全连接层\n",
+    "\n",
+    "`nn.Linear(in_features: int, out_features: int, bias: bool = True)` .  \n",
+    "计算的是 $y=XW^T+b$，其中 $X$的维度是$batch\\_size \\times in\\_features$, $W$的维度是 $out\\_features \\times in\\_features$.\n",
+    "+ 初始化参数：\n",
+    "  + `in_features`：**int**，输入数据的维度\n",
+    "  + `out_features`: **int**，输出数据的维度\n",
+    "  + `bias`：是否有偏置项\n",
+    "  \n",
+    "\n",
+    "+ `forward()`方法参数：\n",
+    "  + 输入参数`Input`：$(batch\\_size, * , in\\_features)$, `*` 是中间维度（没啥用）\n",
+    "  + 返回参数`Output`：$(batch\\_size, *, out\\_features)$\n",
+    "  \n",
+    "\n",
+    "+ 属性\n",
+    "  + `.weight`：权重矩阵\n",
+    "  + `.bias`：偏置项"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight:\n",
+      "Parameter containing:\n",
+      "tensor([[ 0.1275, -0.4422,  0.2409],\n",
+      "        [ 0.1011,  0.2749,  0.1577]], requires_grad=True)\n",
+      "bias:\n",
+      "Parameter containing:\n",
+      "tensor([-0.1225, -0.1347], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "linear_model = nn.Linear(in_features=3, out_features=2)\n",
+    "\n",
+    "print(\"weight:\")\n",
+    "print(linear_model.weight)\n",
+    "print(\"bias:\")\n",
+    "print(linear_model.bias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-2.3011,  0.3329,  1.7874],\n",
+       "        [-0.3963,  0.6201, -0.1444],\n",
+       "        [ 1.4532,  1.7288, -0.6337],\n",
+       "        [ 1.1768,  0.4847,  2.3175]])"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = torch.randn(4,3)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1325,  0.0059],\n",
+       "        [-0.4821, -0.0270],\n",
+       "        [-0.8543,  0.3876],\n",
+       "        [ 0.3715,  0.4830]], grad_fn=<AddmmBackward>)"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_out = linear_model(X)\n",
+    "y_out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Softmax层\n",
+    "\n",
+    "+ `nn.Softmax(dim)`\n",
+    "\n",
+    "+ `nn.LogSofrmax(dim)`\n",
+    "\n",
+    "`dim`参数指定计算的轴维度。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1051, -0.6662, -1.5944,  1.7258, -1.1150],\n",
+       "        [-1.9155, -0.5558,  1.1335, -0.5306, -1.0881],\n",
+       "        [-0.2570, -0.6757, -0.7405, -0.3356, -0.2761],\n",
+       "        [ 1.0059, -0.0551,  0.2353,  0.7235, -0.1148]])"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = torch.randn(4, 5)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1191, 0.0679, 0.0268, 0.7428, 0.0434],\n",
+       "        [0.0310, 0.1207, 0.6536, 0.1238, 0.0709],\n",
+       "        [0.2392, 0.1574, 0.1475, 0.2212, 0.2347],\n",
+       "        [0.3462, 0.1198, 0.1602, 0.2610, 0.1129]])"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "softmax = nn.Softmax(dim=1)\n",
+    "softmax(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-2.1282, -2.6893, -3.6175, -0.2973, -3.1382],\n",
+       "        [-3.4741, -2.1144, -0.4252, -2.0892, -2.6468],\n",
+       "        [-1.4303, -1.8490, -1.9138, -1.5089, -1.4494],\n",
+       "        [-1.0608, -2.1219, -1.8315, -1.3433, -2.1815]])"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logsoft = nn.LogSoftmax(dim=1)\n",
+    "logsoft(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CNN相关\n",
+    "\n",
+    "+ 卷积层  \n",
+    "`nn.Conv2d(in_channels, out_channels, kernel_size, stride=1, padding=0, dilation=1, groups=1, bias=True, padding_mode='zeros')` .  \n",
+    "这里不能指定卷积核，只能指定卷积核的`kernel_size`\n",
+    "\n",
+    "\n",
+    "+ 偏置项\n",
+    "\n",
+    "\n",
+    "+ 池化层  \n",
+    "`nn.MaxPool2d(kernel_size, stride = None, padding = 0, dilation = 1, return_indices = False, ceil_mode = False)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[ 0.,  1.,  2.,  3.],\n",
+       "         [ 4.,  5.,  6.,  7.],\n",
+       "         [ 8.,  9., 10., 11.],\n",
+       "         [12., 13., 14., 15.]],\n",
+       "\n",
+       "        [[16., 17., 18., 19.],\n",
+       "         [20., 21., 22., 23.],\n",
+       "         [24., 25., 26., 27.],\n",
+       "         [28., 29., 30., 31.]],\n",
+       "\n",
+       "        [[32., 33., 34., 35.],\n",
+       "         [36., 37., 38., 39.],\n",
+       "         [40., 41., 42., 43.],\n",
+       "         [44., 45., 46., 47.]]],\n",
+       "\n",
+       "\n",
+       "       [[[48., 49., 50., 51.],\n",
+       "         [52., 53., 54., 55.],\n",
+       "         [56., 57., 58., 59.],\n",
+       "         [60., 61., 62., 63.]],\n",
+       "\n",
+       "        [[64., 65., 66., 67.],\n",
+       "         [68., 69., 70., 71.],\n",
+       "         [72., 73., 74., 75.],\n",
+       "         [76., 77., 78., 79.]],\n",
+       "\n",
+       "        [[80., 81., 82., 83.],\n",
+       "         [84., 85., 86., 87.],\n",
+       "         [88., 89., 90., 91.],\n",
+       "         [92., 93., 94., 95.]]]], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 输入的是 2张 4x4x3 的图片，这里为了容易辨别，将通道数3提前了一点\n",
+    "imgs = np.arange(2*4*4*3,dtype=np.float32).reshape((2,3,4,4))\n",
+    "imgs_tensor = torch.tensor(imgs)\n",
+    "display(imgs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RNN相关"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------\n",
+    "\n",
+    "## 激活函数\n",
+    "\n",
+    "PyTorch中，激活函数也被封装成了一个单独的层来使用"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------\n",
+    "\n",
     "## 损失函数\n",
     "\n",
     "构建完神经网络的前向传播过程之后，需要计算神经网络输出的损失。\n",
@@ -1179,19 +1582,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 优化器\n",
+    "-------------\n",
     "\n",
-    "计算完神经网络前向传播的损失函数之后，需要使用PyTorch里的优化器模块 `torch.optim` 对损失函数进行反向求导，更新梯度.\n",
+    "# 优化器\n",
     "\n",
-    "\n"
+    "计算完神经网络前向传播的损失函数之后，需要使用PyTorch里的优化器模块 `torch.optim` 对损失函数进行反向求导，更新梯度."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 优化器使用\n",
+    "\n",
+    "+ 构造优化器  \n",
+    "构造一个优化器，通常要传入模型的参数、学习率等参数\n",
+    "```python\n",
+    "model = nn.Linear(3,2)\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
+    "```\n",
+    "\n",
+    "\n",
+    "+ 使用优化器来更新梯度  \n",
+    "调用优化器对象的`.step()`方法来更新梯度参数，更新参数之前，必须要进行反向求导的操作，也就是调用`.backward()`方法。  \n",
+    "一个常用的简化版本如下：\n",
+    "```python\n",
+    "# 构造模型\n",
+    "model = nn.Linear(3,2)\n",
+    "# 构造模型对应的优化器\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
+    "# 在数据集上分批次迭代\n",
+    "for input, target in dataset:\n",
+    "    # 清空梯度\n",
+    "    optimizer.zero_grad()\n",
+    "    # 获取输出\n",
+    "    output = model(input)\n",
+    "    # 计算损失\n",
+    "    loss = loss_fn(output, target)\n",
+    "    # 反向求导\n",
+    "    loss.backward()\n",
+    "    # 调用优化器进行梯度更新\n",
+    "    optimizer.step()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 学习率的调整\n",
+    "\n",
+    "`torch.optim.lr_scheduler`子模块提供了随着训练epoch改变的动态学习率设置。\n",
+    "\n",
+    "+ `optim.lr_scheduler.LambdaLR(optimizer, lr_lambda, last_epoch=-1, verbose=False)`\n",
+    "  + `optimizer`，传入的`optimizer`对象\n",
+    "  + `lr_lambda`，用于设置随着epoch的学习速率，有两种方式：\n",
+    "    1. fuction：直接设置的函数\n",
+    "    2. list of function，每个函数对应于一组参数\n",
+    "  + `last_epoch`\n",
+    "  \n",
+    "\n",
+    "+ `optim.lr_scheduler.StepLR(optimizer, step_size, gamma=0.1, last_epoch=-1, verbose=False)`\n",
+    "\n",
+    "+ `optim.lr_scheduler.ExponentialLR(optimizer, gamma, last_epoch=-1, verbose=False)`\n",
+    "\n",
+    "\n",
+    "+ `optim.lr_scheduler.MultiplicativeLR(optimizer, lr_lambda, last_epoch=-1, verbose=False)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 正则化"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------\n",
+    "\n",
+    "# GPU加速"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------\n",
+    "\n",
+    "# PyTorch示例"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1452,15 +1934,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---------------\n",
-    "\n",
-    "# PyTorch示例"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 线性回归"
    ]
   },
@@ -1519,7 +1992,172 @@
    "source": [
     "----\n",
     "\n",
-    "## 简单前馈神经网络"
+    "# MNIST手写数据识别"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数据加载"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision\n",
+    "from torchvision import datasets, transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis\\\\ML-Action'"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Project-Workspace\\Python-Projects\\DataAnalysis\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnist_train = datasets.MNIST(root='./datasets/PyTorch/', train=True, download=True)\n",
+    "mnist_test = datasets.MNIST(root='./datasets/PyTorch/', train=False, download=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0 - zero',\n",
+       " '1 - one',\n",
+       " '2 - two',\n",
+       " '3 - three',\n",
+       " '4 - four',\n",
+       " '5 - five',\n",
+       " '6 - six',\n",
+       " '7 - seven',\n",
+       " '8 - eight',\n",
+       " '9 - nine']"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnist_train.classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Tensor"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnist_train.data.__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([60000, 28, 28])"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnist_train.data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10000, 28, 28])"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnist_test.data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DNN模型\n",
+    "\n",
+    "这里构建一个 **输入层 + 隐藏层1 + 隐藏层2 + softmax层**，一共4层的神经网络，使用的内容如下：  \n",
+    "+ 每一层的激活函数使用ReLU函数\n",
+    "+ 损失函数使用L2正则项\n",
+    "+ 使用衰减的指数学习率"
    ]
   },
   {
