--- a/ML-Action/10-text-processing.ipynb
+++ b/ML-Action/10-text-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -10,12 +10,12 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.18.1\n",
-      "pandas:      1.0.1\n",
-      "matplotlib:  3.1.3\n",
-      "sklearn:     0.22.1\n",
-      "seaborn:     0.10.0\n",
-      "plotly:      4.14.1\n"
+      "numpy:       1.19.2\n",
+      "pandas:      1.2.2\n",
+      "matplotlib:  3.3.4\n",
+      "sklearn:     0.23.2\n",
+      "seaborn:     0.11.1\n",
+      "plotly:      4.14.3\n"
      ]
     }
    ],
@@ -80,6 +80,418 @@
     "完成上面这些步骤，通常有两个包可以使用：\n",
     "+ NLTK\n",
     "+ Spacy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sklearn中的文本特征提取\n",
+    "\n",
+    "sklearn中提供了一些用于处理文本特征的类，都在`sklearn.feature_extraction.text`这个package里，主要是如下三个类：\n",
+    "\n",
+    "`CountVectorizer()`，用于将文本转换成count. \n",
+    "+ 参数\n",
+    "  + `input='content'`，输入的类型，可以是文本，文件，字符串等\n",
+    "  + `strip_accents=None`, 移除 accent 的方式\n",
+    "  + `lowercase=True`, 是否转成小写\n",
+    "  + `preprocessor=None`, 自定义预处理过程\n",
+    "  + `tokenizer=None`,  自定义分词器\n",
+    "  + `stop_words=None`, 停用词集合\n",
+    "  + `token_pattern='(?u)\\b\\w\\w+\\b'`, 分词的正则表达式\n",
+    "  + `ngram_range=(1, 1)`, tuple (min_n, max_n), n-gram的范围\n",
+    "  + `analyzer='word'`, 取值 {‘word’, ‘char’, ‘char_wb’}, 分词的粒度\n",
+    "  + `max_df=1.0`, 超过此阈值的词会被忽略，有两种设置方式\n",
+    "    + 0~1 之间的float\n",
+    "    + int，\n",
+    "  + `min_df=1`, 单词最小出现次数阈值\n",
+    "  + `max_features=None`, int，最大的特征值数量，按照频次排序，取top\n",
+    "  + `vocabulary=None`, 自定义词典\n",
+    "  + `binary=False` \n",
+    "+ 属性\n",
+    "  + `vocabulary_`：dict\n",
+    "  + `stop_words_`：set\n",
+    "  + `fixed_vocabulary_`: boolean\n",
+    "+ 常用方法\n",
+    "  + `fit()`,`transform()`\n",
+    "  + `get_stop_words()`\n",
+    "  + `get_feature_names()`\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "`TfidfVectorizer()`，用于将原始文本数据转换成tf-idf特征\n",
+    "+ 参数，大部分参数和`CountVectorizer()`一致，\n",
+    "+ 属性，和`CountVectorizer()`一致，还多了如下属性\n",
+    "  + `idf_`，array of shape (n_features,)，\n",
+    "+ 方法，和`CountVectorizer()`一致\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "`TfidfTransformer()`，用于将`CountVectorizer()`的结果转换成Tf-idf特征\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer, TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = [\n",
+    "     'This is the first document.',\n",
+    "     'This document is the second document.',\n",
+    "     'And this is the third one.',\n",
+    "     'Is this the first document?',\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer()"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_vec = CountVectorizer()\n",
+    "count_vec.fit(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'this': 8,\n",
+       " 'is': 3,\n",
+       " 'the': 6,\n",
+       " 'first': 2,\n",
+       " 'document': 1,\n",
+       " 'second': 5,\n",
+       " 'and': 0,\n",
+       " 'third': 7,\n",
+       " 'one': 4}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 获取 单词字典表\n",
+    "count_vec.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['and', 'document', 'first', 'is', 'one', 'second', 'the', 'third', 'this']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 获取字典中的词，顺序就是上述字典表定义的顺序\n",
+    "count_vec.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 获取停用词\n",
+    "count_vec.stop_words_\n",
+    "# 或者\n",
+    "count_vec.get_stop_words()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "scipy.sparse.csr.csr_matrix"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = count_vec.transform(corpus)\n",
+    "type(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 1, 1, 0, 0, 1, 0, 1],\n",
+       "       [0, 2, 0, 1, 0, 1, 1, 0, 1],\n",
+       "       [1, 0, 0, 1, 1, 0, 1, 1, 1],\n",
+       "       [0, 1, 1, 1, 0, 0, 1, 0, 1]], dtype=int64)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(X.shape)\n",
+    "X.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TfidfVectorizer()"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf_vec = TfidfVectorizer()\n",
+    "tfidf_vec.fit(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'this': 8,\n",
+       " 'is': 3,\n",
+       " 'the': 6,\n",
+       " 'first': 2,\n",
+       " 'document': 1,\n",
+       " 'second': 5,\n",
+       " 'and': 0,\n",
+       " 'third': 7,\n",
+       " 'one': 4}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf_vec.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['and', 'document', 'first', 'is', 'one', 'second', 'the', 'third', 'this']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf_vec.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "scipy.sparse.csr.csr_matrix"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = tfidf_vec.transform(corpus)\n",
+    "type(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.46979139, 0.58028582, 0.38408524, 0.        ,\n",
+       "        0.        , 0.38408524, 0.        , 0.38408524],\n",
+       "       [0.        , 0.6876236 , 0.        , 0.28108867, 0.        ,\n",
+       "        0.53864762, 0.28108867, 0.        , 0.28108867],\n",
+       "       [0.51184851, 0.        , 0.        , 0.26710379, 0.51184851,\n",
+       "        0.        , 0.26710379, 0.51184851, 0.26710379],\n",
+       "       [0.        , 0.46979139, 0.58028582, 0.38408524, 0.        ,\n",
+       "        0.        , 0.38408524, 0.        , 0.38408524]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(X.shape)\n",
+    "X.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TfidfTransformer()"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf_trans = TfidfTransformer()\n",
+    "X_ = count_vec.transform(corpus)\n",
+    "tfidf_trans.fit(X_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<4x9 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 21 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = tfidf_trans.transform(X_)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.46979139, 0.58028582, 0.38408524, 0.        ,\n",
+       "        0.        , 0.38408524, 0.        , 0.38408524],\n",
+       "       [0.        , 0.6876236 , 0.        , 0.28108867, 0.        ,\n",
+       "        0.53864762, 0.28108867, 0.        , 0.28108867],\n",
+       "       [0.51184851, 0.        , 0.        , 0.26710379, 0.51184851,\n",
+       "        0.        , 0.26710379, 0.51184851, 0.26710379],\n",
+       "       [0.        , 0.46979139, 0.58028582, 0.38408524, 0.        ,\n",
+       "        0.        , 0.38408524, 0.        , 0.38408524]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(X.shape)\n",
+    "X.toarray()"
    ]
   },
   {
@@ -1643,9 +2055,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BaseEnv(3.7.6)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "base-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
